# JavSP

./: JavSP_项目详解.md  config.yml  pyproject.toml  test_anime_ids.py  test_full_anime.py
data/: actress_alias.json  anime_ids.csv
javsp/: avid.py  chromium.py  config.py  datatype.py  file.py  func.py  nfo.py
javsp/cropper/: interface.py  slimeface_crop.py
javsp/web/: base_crawler.py  javdb.py  translate.py
